@@ -50,12 +50,19 @@
   "block.dwm.red_roundel": "Red Roundel",
   "block.dwm.black_roundel": "Black Roundel",
 
-  "block.dwm.oak_roundel": "Oak Roundel",
-  "block.dwm.spruce_roundel": "Spruce Roundel",
-  "block.dwm.birch_roundel": "Birch Roundel",
-  "block.dwm.jungle_roundel": "Jungle Roundel",
-  "block.dwm.acacia_roundel": "Acacia Roundel",
-  "block.dwm.dark_oak_roundel": "Dark Oak Roundel",
+  "block.dwm.oak_roundel": "Oak Planks Roundel",
+  "block.dwm.spruce_roundel": "Spruce Planks Roundel",
+  "block.dwm.birch_roundel": "Birch Planks Roundel",
+  "block.dwm.jungle_roundel": "Jungle Planks Roundel",
+  "block.dwm.acacia_roundel": "Acacia Planks Roundel",
+  "block.dwm.dark_oak_roundel": "Dark Oak Planks Roundel",
+
+  "block.dwm.stripped_oak_roundel": "Stripped Oak Planks Roundel",
+  "block.dwm.stripped_spruce_roundel": "Stripped Spruce Planks Roundel",
+  "block.dwm.stripped_birch_roundel": "Stripped Birch Planks Roundel",
+  "block.dwm.stripped_jungle_roundel": "Stripped Jungle Planks Roundel",
+  "block.dwm.stripped_acacia_roundel": "Stripped Acacia Planks Roundel",
+  "block.dwm.stripped_dark_oak_roundel": "Stripped Dark Oak Planks Roundel",
 
   "block.dwm.hartnell_roundel": "Hartnell Roundel",
   "block.dwm.hartnell_roundel_split": "Hartnell Roundel",
