@@ -57,6 +57,13 @@
   "block.dwm.acacia_roundel": "Acacia Roundel",
   "block.dwm.dark_oak_roundel": "Dark Oak Roundel",
 
+  "block.dwm.stripped_oak_roundel": "Stripped Oak Roundel",
+  "block.dwm.stripped_spruce_roundel": "Stripped Spruce Roundel",
+  "block.dwm.stripped_birch_roundel": "Stripped Birch Roundel",
+  "block.dwm.stripped_jungle_roundel": "Stripped Jungle Roundel",
+  "block.dwm.stripped_acacia_roundel": "Stripped Acacia Roundel",
+  "block.dwm.stripped_dark_oak_roundel": "Stripped Dark Oak Roundel",
+
   "block.dwm.hartnell_roundel": "Hartnell Roundel",
   "block.dwm.hartnell_roundel_split": "Hartnell Roundel",
 
