@@ -1,0 +1,3 @@
+{
+  "parent": "dwm:block/roundel/stripped_spruce_roundel"
+}
